2.2.4 :bug: fixed scrolling menu on mobile

--- a/wp-content/themes/vdc_2.2.4/scss/_mobile-menu.scss
+++ b/wp-content/themes/vdc_2.2.4/scss/_mobile-menu.scss
@@ -131,7 +131,7 @@
 	}
 
 	&.org {
-		background-color: $pink;
+		background-color: $purple;
 
 		.mobile-menu {
 			background-color: $purple;
