--- a/wp-content/themes/vdc_2.2.4/scss/_mobile.scss
+++ b/wp-content/themes/vdc_2.2.4/scss/_mobile.scss
@@ -1,11 +1,9 @@
 .mobile-nav {
-	position: fixed;
 	width: 100%;
 	z-index: 9999;
 	padding-top: 5px;
 	padding-bottom: 5px;
 	top: 0;
-	//position: relative;
 
 	.container {
 		display: flex;
